# bitcraft

./: .gitignore  CMakeLists.txt  main.cpp
res/shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
src/: Camera.cpp  Camera.h  Engine3D.cpp  Engine3D.h  GameEngine.cpp  GameEngine.h  InputController.cpp  InputController.h  LightSource.cpp  LightSource.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Screen.cpp  Screen.h  Window.cpp  Window.h  algebra3d.cpp  algebra3d.h
src/__old/: Camera.h  GameEngine.cpp  GameEngine.h  LightSource.cpp  LightSource.h  Screen.cpp  Screen.h
src/__old/geometry/: color.h  matrix.h  mesh.cpp  mesh.h  plane.h
src/common/: shaders.cpp  shaders.h
src/core/: Shaders.cpp  Shaders.h  Texture.cpp  Texture.h
src/geometry/: color.h  face.cpp  face.h  face_t.cpp  face_t.h  matrix.cpp  matrix_t.cpp  matrix_t.h  mesh.cpp  mesh.h  plane.cpp  vertex.h  vertex_t.h
src/utils/: stb_image.h
